--- a/docs/team/nordic96.adoc
+++ b/docs/team/nordic96.adoc
@@ -7,17 +7,19 @@
 
 == Overview
 
-Typee is an engagement management application, where users can manage engagements and schedule accordingly. Our main users are targeted in corporation's receptionists and secretaries
+Typee is an engagement management application built on JavaFX framework, where users can manage engagements and schedule accordingly. Our main users are targeted in corporation's receptionists and secretaries
 whose main tasks is to manage and arrange engagements.
 
 .default window of Typee upon start-up
-image::ppp_nordic96/ppp_1.png[width="550"]
+image::ppp_nordic96/ppp_1.png[width="500", float="left"]
 
-* Main UI is composed of 4 parts;
-** Tab/Menu Pane: List of Name/Feature/Menu is displayed here.
-** Menu Window: Each feature/menu window is displayed and can be interacted.
-** Command Output Display: Command output after execution displays here.
-** Command Input text field: User enters command
+Main UI is composed of 4 parts;
+
+* *Tab/Menu Pane*: List of Name/Feature/Menu is displayed here.
+
+* *Menu Window*: Each feature/menu window is displayed and can be interacted.
+* *Command Output Display*: Command output after execution displays here.
+* *Command Input text field*: User enters command
 * Typee divides engagements into 3 types; Appointments, Meetings and Interviews.
 * Typee application interacts with the users by separating application features into different menu windows. Each menu name is displayed in
 the left-end of the application window, where user can switch to different windows anytime by using command.
