Edited AboutUs and ContactUs

--- a/docs/ContactUs.adoc
+++ b/docs/ContactUs.adoc
@@ -6,7 +6,7 @@
 * *Contributing* : We welcome pull requests. Follow the process described https://github.com/oss-generic/process/blob/master/docs/QuestionsIssuesPrs.adoc#posting-an-issue[here]
 
 * *If you still have any questions, feel free to contact any of our developers and they are as follows:*
-1. Lawnce Goh : `lawnce_goh@u.nus.edu`
+1. Lawnce Goh Jia Wei: `lawnce_goh@u.nus.edu`
 2. Lee Wei Gen: `leeweigen@u.nus.edu`
 3. Tan Zhan Ming : `e0349703@u.nus.edu`
-4. Joshua Seet : `e0325549@u.nus.edu`
+4. Joshua Seet Siang Suen: `e0325549@u.nus.edu`
